# linked-in-posts

./: .cruft.json  .envrc  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.rst  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.github/workflows/: main.yml
docs/: index.md  modules.md
linked_in_posts/: pickling.py
modules/: index.html
notebooks/: Untitled.ipynb  pickling-and-fasttext-models.ipynb
search/: search_index.json
tests/: conftest.py  test_foo.py  test_pickling.py
